<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".ui.main.add_edit_note.AddEditNoteFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout_add_note"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView

                android:background="?attr/selectableItemBackgroundBorderless"
                android:id="@+id/image_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_back"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_title"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:paddingStart="4dp"
                android:paddingEnd="2dp"
                android:textColor="@color/colorWhite"
                android:textSize="28sp"
                app:layout_constraintBottom_toBottomOf="@id/image_back"
                app:layout_constraintLeft_toRightOf="@id/image_back"
                app:layout_constraintRight_toLeftOf="@id/image_delete"
                app:layout_constraintTop_toTopOf="@id/image_back" />

            <ImageView
                android:background="?attr/selectableItemBackgroundBorderless"
                android:id="@+id/image_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_delete"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/scroll_view_content"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fillViewport="true"
            app:layout_constraintBottom_toTopOf="@id/progressbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/constraint_header">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/text_note_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@null"
                    android:hint="@string/note_title_hint"
                    android:inputType="text"
                    android:maxLength="30"
                    android:maxLines="1"
                    android:scrollHorizontally="true"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorLightGrey"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/text_note"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:background="@null"
                    android:gravity="top"
                    android:hint="@string/note_hint"
                    android:padding="2dp"
                    android:scrollbars="vertical"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorLightGrey"
                    android:textSize="18sp" />

            </LinearLayout>

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressbar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:indeterminateOnly="true"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/float_save_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="10dp"
        android:src="@drawable/ic_done"
        android:visibility="visible" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>
