<resources>
    <string name="app_name">Pronote</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="msg_do_not_have_not">Notes appears here</string>
    <string name="note_title_hint">Title</string>
    <string name="note_hint">Note</string>
    <string name="title_warning">Warning!</string>
    <string name="message_are_you_sure_to_clear_all_notes">Are you sure to clear all notes?</string>
    <string name="message_are_you_sure_to_delete_this_note">Are you sure to delete this note?</string>
    <string name="action_yes">Yes</string>
    <string name="action_no">No</string>
    <string name="message_note_created">Successfully created!</string>
    <string name="title_edit_note">Edit Note</string>
    <string name="title_add_note">Add Note</string>
    <string name="error_note_can_not_be_empty">Note can not be empty</string>
    <string name="content_bubble">content_bubble</string>
</resources>
